--- a/client/index.html
+++ b/client/index.html
@@ -3,16 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Spotify Data Visualizer</title>
+    <title>Bootstrap demo</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <button id="songFeatures" onclick="getSongFeatures()">Click me for song features</button>
-    <p id="test">sd</p>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <h1>Spotify Data Visualizer!</h1>
+    <button id="button" onclick="getSongFeatures()">Click me for song features</button>
+    <p id="songFeatures">song features will be here...</p>
+    <div class="container" id="featuresDiv">
+      <table class="table" id="songFeaturesTable" border="1">
+        <thead>
+            <tr>
+                <th>Song name</th>
+                <th>Artist name</th>
+                <th>Danceability</th>
+                <th>Energy</th>
+                <th>Key</th>
+                <th>Loudness</th>
+                <th>Speechiness</th>
+                <th>Acousticness</th>
+                <th>Instrumentalness</th>
+                <th>Liveness</th>
+                <th>Valence</th>
+                <th>Tempo</th>
+            </tr>
+        </thead>
+        <tbody id="tableBody">
+    </table>
+</div>
+<div class="container" id="chartOne">
+  <canvas id="myChart"></canvas>
+</div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="javascript/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
 </html>
