--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,7 @@
               <a class="nav-link" href="#">Top Songs</a>
             </li>
             <li class="nav-item">
-              <a id="featuresLink" class="nav-link" href="./songFeatures.html">Listening Analysis</a>
+              <a id="featuresLink" class="nav-link" href="/songFeatures.html">Listening Analysis</a>
             </li>
           </ul>
         </div>
