--- a/client/songFeatures.html
+++ b/client/songFeatures.html
@@ -43,12 +43,12 @@
         <button type="button" class="btn btn-outline-primary">Liveness</button>
       </div>
     </div>
-    
-    <div id="chartContainer" class="container">
-      <div id="chartOfAttributes">
-      <canvas id="attributeChart" width="1000"></canvas>
+
+    <div class="container text-center">
+    <canvas id="attributeChart"></canvas>
     </div>
-  </div>
+
+
     
   <!--  <button id="button" onclick="getSongFeatures()">Click me for song features</button>
     <p id="songFeatures">song features will be here...</p>
